Added a version to run on unix.

--- a/README
+++ b/README
@@ -31,6 +31,8 @@ of your choice, where you have writing permissions.
 
   - Mac OS:   ./MixMHC2pred -i test/testData.txt -o test/out.txt -a DRB1_11_01 DRB3_02_02 DPA1_01_03__DPB1_04_01 DQA1_05_05__DQB1_03_01
 
+  - Unix:   ./MixMHC2pred_unix -i test/testData.txt -o test/out.txt -a DRB1_11_01 DRB3_02_02 DPA1_01_03__DPB1_04_01 DQA1_05_05__DQB1_03_01
+
   - Windows:   MixMHC2pred.exe -i test/testData.txt -o test/out.txt -a DRB1_11_01 DRB3_02_02 DPA1_01_03__DPB1_04_01 DQA1_05_05__DQB1_03_01
 
 Your file out.txt should be the same as test/out_compare.txt.
