Small update to readme.

--- a/README
+++ b/README
@@ -9,7 +9,7 @@
 # FOR-PROFIT USERS
 # If you plan to use MixMHC2pred (version 1.0) or any data provided with the script in any for-profit
 # application, you are required to obtain a separate license.
-# To do so, please contact eauffarth@licr.org or lfoit@licr.org at the Ludwig Institute for  Cancer Research Ltd.
+# To do so, please contact eauffarth@licr.org at the Ludwig Institute for  Cancer Research Ltd.
 #
 #
 # For scientific questions, please contact Julien Racle (julien.racle@unil.ch) or David Gfeller (David.Gfeller@unil.ch)
